# ToMoDL

./: .gitignore  .gitmodules  DataLoading.py  MoDL_K_fold_0  README.md  _config.yml  config.py  deepopt.yml  demo.py  environment_setup.sh  file.txt  obanenv.yml  optVolume_slice.tif  paper.bib  paper.md  pyproject.toml  requirements.txt  stitched_ctf.py  test_image.ipynb  test_images.ipynb  test_tomopy.ipynb
Global/: ADMM_DeepOPT_Comparison.py
OPTmodl/: model.py  model_torch.py  supportingFunctions.py  trn.py
Reconstruction/: Reconstruction.py  ReconstructionHessian.py  Test_Projections_Normalization.py
SavedModels/: KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72.pth  KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72__Kfold0.pth  KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72__Kfold1.pth  KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72__Kfold2.pth  KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72__Kfold3.pth  KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72__Kfold4.pth  KFolding_PSNR_MODL_Test71K_8_lam_0.05_nlay_8_proj_72__Kfold5.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72_Kfold0.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72_Kfold1.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72_Kfold2.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72_Kfold3.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72_Kfold4.pth  KFolding_SSIM_MODL_Test71K_8_lam_0.05_nlay_8_proj_72_Kfold5.pth  K_10_lam_0.05_nlay_4_proj_20_trnSize100.pth  (+168 more)
Tests/: Test_CG.py  (+24 more)
(+3504 files in other folders)
